@@ -3,6 +3,9 @@ OpenDNSSEC 1.3.17rc1
 * SUPPORT-114: libhsm: Optimize storage in HSM by deleting the public 
   key directly if SkipPublicKey is used [OPENDNSSEC-575].
 * Signer Engine: log serial of signed zone in STATS line.
+* OPENDNSSEC-550: Signer Engine: Put NSEC3 records on empty non-terminals
+  derived from unsigned delegations (be compatible with servers that are
+  incompatible with RFC 5155 errata 3441).
 * OPENDNSSEC-569: Build compatibility with SoftHSMv2.
 
 Bugfixes:
